--- a/style.css
+++ b/style.css
@@ -6,34 +6,42 @@ html,
     margin: 0;
     padding: 0;
 }
-.container {
-    display: flex;
-  flex-wrap: wrap;
-  width: 90vw;
-  justify-content: space-between 5px;
-}
 
-.card {
-    height: 40rem;
-    width: 30rem;
-    border: 2px;
-    border-color: black;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container{
+    width: 85vw;
+    height: 50vw;
+    flex-direction: row;
+    font-size: 2rem;
+    flex-direction: row;
     justify-content: space-between;
-    background-image: linear-gradient('') url();
-    background-size: cover;
+    align-items: center;
+    margin: 15rem;
+    display: flex;
+    flex-wrap: wrap;
+    width: 90vw;
+    justify-content: space-between 5px;    
 }
-.card-img {
-    width: 100%;
-    height: 45%;
+.terstegenimg{
+    width: 50%;
     object-fit: cover;
+    margin-left: 13rem;
+    margin-top: -1rem;
 }
-.card-header {
-    margin-top: 1.2rem;
+h1{
+    font-size: 7rem;
+    text-align: center;
+    margin-top: 2rem;
+    color: rgb(106, 121, 220);
 }
-.card-price {
-    margin-bottom: 1.2rem;
+h2{
+    text-align: center;
+}
+.posts{
+    width: 45vw;
+    height: 30vw;
+    background-color: bisque;
+    border: solid;
+    border-color: black;
+    margin-left: 2rem;
+    margin-top: 1rem;
 }
