--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ html,
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: black;
+}
 
 .container{
     width: 85vw;
@@ -37,11 +40,12 @@ h2{
     text-align: center;
 }
 .posts{
-    width: 45vw;
+    width: 26%;
     height: 30vw;
-    background-color: bisque;
+    background-color: rgb(163, 156, 146);
     border: solid;
-    border-color: black;
+    border-color: rgb(103, 151, 228);
     margin-left: 2rem;
     margin-top: 1rem;
+    border-radius: 10%;
 }
