--- a/style.css
+++ b/style.css
@@ -22,6 +22,23 @@ body{
     justify-content: space-between 5px;
     margin-left: 4%;
 }
+@media screen and (max-width: 667px) {
+    .posts{
+        width: 100%;
+        align-items: center;
+    }
+    .container{
+        flex-direction: row;
+    }
+    .h1{
+        text-align: center;
+    }
+}
+@media screen and (max-width: 900px) {
+    .posts{
+        width: 45%;
+    }
+}
 img{
     width: 65%;
     object-fit: contain;
@@ -30,6 +47,12 @@ img{
     display: block;
     margin: 0 auto;
     border-radius: 12%;
+}
+p{
+    font-size: 50px;
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(248, 182, 17);
 }
 .cubarsiimg{
     width: 83.5%;
@@ -104,25 +127,27 @@ img{
     border-radius: 30%;
 }
 h1{
-    font-size: 7rem;
+    font-size: 5rem;
     text-align: center;
     margin-top: 2rem;
-    color: rgb(106, 121, 220);
+    color: rgb(255, 81, 81);
 }
 h2{
     text-align: center;
     margin-top: 3%;
     margin-bottom: -3%;
+    color: rgb(249, 179, 3);
 }
 .posts{
     width: 26%;
     height: 28vw;
-    background-color: rgb(188, 169, 141);
+    background-color: rgb(119, 129, 232);
     border: solid;
-    border-color: rgb(103, 151, 228);
+    border-style: ridge;
+    border-color: rgb(178, 92, 92);
     margin-left: 2rem;
     margin-top: 1rem;
-    border-radius: 10%;
+    border-radius: 15%;
     align-items: center;
     min-width: 25rem;
     min-height: 30rem;
