--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body,
 html,
 * {
@@ -5,6 +6,9 @@ html,
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 body{
     background-color: black;
@@ -39,6 +43,24 @@ body{
         width: 45%;
     }
 }
+button{
+    background-color: rgb(219, 81, 108);
+    font-size: 28px;
+    color: rgb(85, 85, 223);
+    border: solid;
+    border-radius: 20%;
+    border-color: black;
+    text-align: center;
+    margin-left: 10rem;
+    margin-bottom: 20px;
+}
+button:hover{
+    transition: all;
+    color: aliceblue;
+}
+button:after{
+    color: aliceblue;
+}
 img{
     width: 65%;
     object-fit: contain;
@@ -51,7 +73,6 @@ img{
 p{
     font-size: 50px;
     text-align: center;
-    margin-top: 10px;
     color: rgb(248, 182, 17);
 }
 .cubarsiimg{
@@ -140,7 +161,7 @@ h2{
 }
 .posts{
     width: 26%;
-    height: 28vw;
+    height: 30vw;
     background-color: rgb(119, 129, 232);
     border: solid;
     border-style: ridge;
