--- a/style.css
+++ b/style.css
@@ -19,14 +19,15 @@ body {
     height: 50vw;
     flex-direction: row;
     font-size: 2rem;
-    justify-content: space-between;
     flex-wrap: wrap;
     display: flex;
     width: 90vw;
-    justify-content: space-between 5px;
     margin-left: 4%;
+    justify-content: space-between;
 }
-
+    a{
+        color: aliceblue;
+    }
 @media screen and (max-width: 667px) {
     .posts {
         width: 100%;
@@ -49,20 +50,21 @@ body {
 }
 
 button {
-    background-color: rgb(219, 81, 108);
+    background-color: rgb(81, 104, 219);
     font-size: 28px;
-    color: rgb(85, 85, 223);
+    color: rgb(255, 255, 255);
     border: solid;
     border-radius: 20%;
     border-color: black;
     text-align: center;
-    margin-left: 10rem;
+    margin-left: 8rem;
     margin-bottom: 20px;
 }
 
 button:hover {
-    transition: all;
-    color: aliceblue;
+    transition-duration: 0.8s;
+    background-color: rgb(235, 197, 71);
+    transform: scaleY(1.1);
 }
 
 button:after {
@@ -180,7 +182,7 @@ h2 {
 }
 
 .posts {
-    width: 26%;
+    width: 22%;
     height: 30vw;
     background-color: rgb(119, 129, 232);
     border: solid;
@@ -190,6 +192,6 @@ h2 {
     margin-top: 1rem;
     border-radius: 15%;
     align-items: center;
-    min-width: 25rem;
+    min-width: 21rem;
     min-height: 30rem;
 }
