--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button {
     padding: 10px 20px;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
     margin-left: 6.6rem;
+    align-items: center;
 }
 
 button:hover {
